manifests/swiss-army.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: swissarmy
spec:
  selector:
      matchLabels:
        name: swissarmy
  template:
    metadata:
      labels:
        name: swissarmy
    spec:
      tolerations:
      - operator: Exists
      containers:
      - image: rancherlabs/swiss-army-knife
        imagePullPolicy: Always
        name: swissarmy
        command: ["sh", "-c", "tail -f /dev/null"]
        terminationMessagePath: /dev/termination-log
