manifests/argo.yml
apiVersion: v1
kind: Namespace
metadata:
  name: argo
  labels:
    name: argo
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http-redirect-ingressroute
  namespace: argo
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/argo`)
      kind: Rule
      services:
        - name: argo-argo-workflows-server
          namespace: argo
          port: 2746
          scheme: http
      middlewares:
        - name: argo-prefix
---
# Replace path with regex
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: argo-prefix
  namespace: argo
spec:
  stripPrefix:
    prefixes:
      - /argo
