manifests/nginx-demo.yml
apiVersion: v1
kind: Namespace
metadata:
  name: test-app
  labels:
    name: test-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  labels:
    app: test-app
  namespace: test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: nginx
        image: nginxdemos/hello
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: test-app-svc
  namespace: test-app
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector: 
    app: test-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testapp-ingress
  namespace: test-app
  annotations:
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - http:
      paths:
      - path: /test-app
        pathType: Prefix
        backend:
          service:
            name: test-app-svc
            port:
              number: 80
